--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,3 +1,19 @@
-odd {
-	
+.odd {
+	background-color: #fc0377;
+	font-family: "Verdana", sans-serif;
+}
+
+#sec {
+	color: blue;
+	font-size: 36px;
+}
+
+.third {
+	font-size: 24px;
+}
+
+#fourth {
+	background-color: #00ff26;
+	font-size: 24px;
+	font-weight: bold;
 }
